# csharp_nng

./: README.md
nng_csharp_test/NngCSharpTest/: .gitignore  Form1.Designer.cs  Form1.cs  NngCSharpTest.csproj  NngCSharpTest.sln  NngServer.cs  Program.cs
nng_csharp_test/NngCSharpTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
nng_package_dll/: .gitignore  CMakeLists.txt  client_test.cpp  client_test.h  extern_define.h  nng_package.cpp  nng_package.h
nng_package_dll/util/: Singleton.h
nng_package_dll/util/logger/: Logger.cpp  Logger.h
nng_package_dll/util/myDate/: myDate.cpp  myDate.h
nng_server_test/: server.py  test_server.py
